--- a/catalog.html
+++ b/catalog.html
@@ -34,10 +34,7 @@
       </div>
     </div>
     <div class="header-bottom container">
-      <div class="header-description">Интернет-магазин<br>
-        строительных материалов<br>
-        и инструментов для ремонта
-      </div>
+      <div class="header-description">Интернет-магазин строительных материалов и инструментов для ремонта</div>
       <div class="header-contacts">
         <a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
         <p class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
@@ -115,22 +112,22 @@
             </fieldset>
             <fieldset class="filter-brands">
               <legend>Производители:</legend>
-              <input type="checkbox" name="bosch" id="brand-bosch" class="visually-hidden" checked>
+              <input type="checkbox" name="bosch" id="brand-bosch" class="filter-checkbox visually-hidden" checked>
               <label for="brand-bosch">Bosch</label>
-              <input type="checkbox" name="interskol" id="brand-interskol" class="visually-hidden">
+              <input type="checkbox" name="interskol" id="brand-interskol" class="filter-checkbox visually-hidden">
               <label for="brand-interskol">Интерскол</label>
-              <input type="checkbox" name="makita" id="brand-makita" class="visually-hidden" checked>
+              <input type="checkbox" name="makita" id="brand-makita" class="filter-checkbox visually-hidden" checked>
               <label for="brand-makita">Makita</label>
-              <input type="checkbox" name="dewalt" id="brand-dewalt" class="visually-hidden">
+              <input type="checkbox" name="dewalt" id="brand-dewalt" class="filter-checkbox visually-hidden">
               <label for="brand-dewalt">Dewalt</label>
-              <input type="checkbox" name="hitachi" id="brand-hitachi" class="visually-hidden">
+              <input type="checkbox" name="hitachi" id="brand-hitachi" class="filter-checkbox visually-hidden">
               <label for="brand-hitachi">Hitachi</label>
             </fieldset>
             <fieldset class="filter-charge">
               <legend>Питание:</legend>
-              <input type="radio" name="charge" id="charge-battery" value="battery" class="visually-hidden" checked>
+              <input type="radio" name="charge" id="charge-battery" value="battery" class="filter-radio visually-hidden" checked>
               <label for="charge-battery">Аккумуляторные</label>
-              <input type="radio" name="charge" id="charge-electric" value="electric" class="visually-hidden">
+              <input type="radio" name="charge" id="charge-electric" value="electric" class="filter-radio visually-hidden">
               <label for="charge-electric">Сетевые</label>
             </fieldset>
             <button type="submit" class="filter-button">Показать</button>
@@ -159,8 +156,8 @@
           <ul class="catalog-list">
             <li class="catalog-item">
               <div class="catalog-item-buttons">
-                <button class="catalog-item-button catalog-item-order">Купить</button>
-                <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+                <a class="catalog-item-button catalog-item-order">Купить</a>
+                <a class="catalog-item-button catalog-item-bookmark">В закладки</a>
               </div>
               <div class="catalog-image-container">
                 <a href="catalog-item.html">
@@ -175,8 +172,8 @@
             </li>
             <li class="catalog-item">
               <div class="catalog-item-buttons">
-                <button class="catalog-item-button catalog-item-order">Купить</button>
-                <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+                <a class="catalog-item-button catalog-item-order">Купить</a>
+                <a class="catalog-item-button catalog-item-bookmark">В закладки</a>
               </div>
               <div class="catalog-image-container">
                 <a href="catalog-item.html">
@@ -189,10 +186,10 @@
               <span class="old-price">30500 Р.</span>
               <span class="new-price">25500 Р.</span>
             </li>
-            <li class="catalog-item catalog-item-new catalog-item-active">
+            <li class="catalog-item catalog-item-new">
               <div class="catalog-item-buttons">
-                <button class="catalog-item-button catalog-item-order">Купить</button>
-                <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+                <a class="catalog-item-button catalog-item-order">Купить</a>
+                <a class="catalog-item-button catalog-item-bookmark">В закладки</a>
               </div>
               <div class="catalog-image-container">
                 <a href="catalog-item.html">
@@ -206,8 +203,8 @@
             </li>
             <li class="catalog-item">
               <div class="catalog-item-buttons">
-                <button class="catalog-item-button catalog-item-order">Купить</button>
-                <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+                <a class="catalog-item-button catalog-item-order">Купить</a>
+                <a class="catalog-item-button catalog-item-bookmark">В закладки</a>
               </div>
               <div class="catalog-image-container">
                 <a href="catalog-item.html">
@@ -222,8 +219,8 @@
             </li>
             <li class="catalog-item catalog-item-new">
               <div class="catalog-item-buttons">
-                <button class="catalog-item-button catalog-item-order">Купить</button>
-                <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+                <a class="catalog-item-button catalog-item-order">Купить</a>
+                <a class="catalog-item-button catalog-item-bookmark">В закладки</a>
               </div>
               <div class="catalog-image-container">
                 <a href="catalog-item.html">
@@ -238,8 +235,8 @@
             </li>
             <li class="catalog-item">
               <div class="catalog-item-buttons">
-                <button class="catalog-item-button catalog-item-order">Купить</button>
-                <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+                <a class="catalog-item-button catalog-item-order">Купить</a>
+                <a class="catalog-item-button catalog-item-bookmark">В закладки</a>
               </div>
               <div class="catalog-image-container">
                 <a href="catalog-item.html">
@@ -253,8 +250,8 @@
             </li>
             <li class="catalog-item catalog-item-new">
               <div class="catalog-item-buttons">
-                <button class="catalog-item-button catalog-item-order">Купить</button>
-                <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+                <a class="catalog-item-button catalog-item-order">Купить</a>
+                <a class="catalog-item-button catalog-item-bookmark">В закладки</a>
               </div>
               <div class="catalog-image-container">
                 <a href="catalog-item.html">
@@ -269,8 +266,8 @@
             </li>
             <li class="catalog-item">
               <div class="catalog-item-buttons">
-                <button class="catalog-item-button catalog-item-order">Купить</button>
-                <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+                <a class="catalog-item-button catalog-item-order">Купить</a>
+                <a class="catalog-item-button catalog-item-bookmark">В закладки</a>
               </div>
               <div class="catalog-image-container">
                 <a href="catalog-item.html">
@@ -285,8 +282,8 @@
             </li>
             <li class="catalog-item">
               <div class="catalog-item-buttons">
-                <button class="catalog-item-button catalog-item-order">Купить</button>
-                <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+                <a class="catalog-item-button catalog-item-order">Купить</a>
+                <a class="catalog-item-button catalog-item-bookmark">В закладки</a>
               </div>
               <div class="catalog-image-container">
                 <a href="catalog-item.html">
@@ -329,8 +326,9 @@
         <li><a href="#">Доставка</a></li>
         <li><a href="#">Контакты</a></li>
       </ul>
-      <p class="footer-contacts">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-        +7 (812) 555-05-55
+      <p class="footer-contacts">
+        <span class="footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
+        <a href="tel:+78125550555" class="footer-phone">+7 (812) 555-05-55</a>
       </p>
       <ul class="footer-menu-extra">
         <li><a href="#">Материалы</a></li>
@@ -342,8 +340,8 @@
     <div class="footer-bottom">
       <div class="container">
         <p class="footer-copyright">
-          © 2010–2017 Компания «Техномарт»<br>
-          Все права защищены
+          <span class="footer-copyright-owner">© 2010–2017 Компания «Техномарт»</span>
+          <span>Все права защищены</span>
         </p>
         <div class="footer-social">
           <ul>
@@ -360,12 +358,12 @@
         </div>
         <div class="footer-dev-contacts">
           <p class="footer-feedback">
-            Обратная связь:<br>
-            <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+            <span>Обратная связь:</span>
+            <span class="footer-feedback-mail"><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></span>
           </p>
           <p class="footer-developer">
-            Разработано —<br>
-            <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+            <span>Разработано —</span>
+            <span class="footer-developer-website"><a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></span>
           </p>
         </div>
       </div>
@@ -376,8 +374,8 @@
       <h2>Товар добавлен в корзину!</h2>
     </div>
     <div class="modal-button-container">
-      <a href="cart.html" class="button-order">Оформить заказ</a>
-      <button type="button" class="button-dismiss">Продолжить покупки</button>
+      <a href="cart.html" class="button button-order">Оформить заказ</a>
+      <button type="button" class="button button-dismiss">Продолжить покупки</button>
     </div>
     <button class="modal-close" type="button" aria-label="Закрыть"></button>
   </section>
