--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
       </div>
       <div class="header-bottom container">
         <div class="header-description">
-          Интернет-магазин<br>
-          строительных материалов<br>
-          и инструментов для ремонта
+          Интернет-магазин строительных материалов и инструментов для ремонта
         </div>
         <div class="header-contacts">
           <a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
@@ -126,8 +124,8 @@
         <ul class="main-products-list">
           <li class="catalog-item">
             <div class="catalog-item-buttons">
-               <button class="catalog-item-button catalog-item-order">Купить</button>
-               <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+               <a class="catalog-item-button catalog-item-order">Купить</a>
+               <a class="catalog-item-button catalog-item-bookmark">В закладки</a>
             </div>
             <div class="catalog-image-container">
              <a href="catalog-item.html">
@@ -142,8 +140,8 @@
           </li>
           <li class="catalog-item">
             <div class="catalog-item-buttons">
-               <button class="catalog-item-button catalog-item-order">Купить</button>
-               <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+               <a class="catalog-item-button catalog-item-order">Купить</a>
+               <a class="catalog-item-button catalog-item-bookmark">В закладки</a>
             </div>
             <div class="catalog-image-container">
              <a href="catalog-item.html">
@@ -158,8 +156,8 @@
           </li>
           <li class="catalog-item">
             <div class="catalog-item-buttons">
-               <button class="catalog-item-button catalog-item-order">Купить</button>
-               <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+               <a class="catalog-item-button catalog-item-order">Купить</a>
+               <a class="catalog-item-button catalog-item-bookmark">В закладки</a>
             </div>
             <div class="catalog-image-container">
              <a href="catalog-item.html">
@@ -174,8 +172,8 @@
           </li>
           <li class="catalog-item catalog-item-new">
             <div class="catalog-item-buttons">
-               <button class="catalog-item-button catalog-item-order">Купить</button>
-               <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+               <a class="catalog-item-button catalog-item-order">Купить</a>
+               <a class="catalog-item-button catalog-item-bookmark">В закладки</a>
             </div>
             <div class="catalog-image-container">
              <a href="catalog-item.html">
@@ -210,8 +208,7 @@
       <div class="container">
         <div class="services-box">
           <h2>Сервисы</h2>
-          <p>Хороший интернет-магазин отличается от плохого не только ценами!
-          <br>Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+          <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
         </div>
         <div class="services-slider">
           <ul class="services-list">
@@ -221,17 +218,23 @@
           </ul>
             <div class="services-description">
               <div class="services-description-item services-shipping">
-              <h3>Доставка</h3>
-              <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+                <div class="services-description-text">
+                  <h3>Доставка</h3>
+                  <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+                </div>
               </div>
               <div class="services-description-item services-warranty">
-              <h3>Гарантия</h3>
-              <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами</p>
+                <div class="services-description-text">
+                  <h3>Гарантия</h3>
+                  <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами</p>
+                </div>
               </div>
               <div class="services-description-item services-credit">
-              <h3>Кредит</h3>
-              <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
-              <a href="#" class="button">Отправить заявку</a>
+                <div class="services-description-text">
+                  <h3>Кредит</h3>
+                  <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
+                  <a href="#" class="button">Отправить заявку</a>
+                </div>
               </div>
             </div>
         </div>
@@ -242,8 +245,7 @@
         <section class="main-about">
           <h2>Компания «Техномарт»</h2>
           <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-          <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
-            Техномарт работает со многими транспортными компаниями:
+          <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:
           </p>
           <ul class="companies-list">
             <li>Деловые линии</li>
@@ -254,11 +256,10 @@
         </section>
         <section class="main-contacts">
           <h2>Контакты</h2>
-          <p>Вы можете забрать товар сами, <br>
-            заехав в наш офис:
+          <p>Вы можете забрать товар сами, заехав в наш офис:
           </p>
           <div class="contacts-map"><a href="https://goo.gl/maps/KQanHvccPNP2" target="_blank"><img src="img/main-map.jpg" alt="Карта проезда" width="300" height="158"></a></div>
-          <button class="button button-contacts">Заблудились? Напишите нам!</button>
+          <a href="#" class="button button-contacts">Заблудились? Напишите нам!</a>
         </section>
       </div>
     </div>
@@ -275,8 +276,9 @@
           <li><a href="#">Доставка</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
-        <p class="footer-contacts">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-          +7 (812) 555-05-55
+        <p class="footer-contacts">
+          <span class="footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
+          <a href="tel:+78125550555" class="footer-phone">+7 (812) 555-05-55</a>
         </p>
         <ul class="footer-menu-extra">
           <li><a href="#">Материалы</a></li>
@@ -288,8 +290,8 @@
       <div class="footer-bottom">
         <div class="container">
           <p class="footer-copyright">
-            © 2010–2017 Компания «Техномарт»<br>
-            Все права защищены
+            <span class="footer-copyright-owner">© 2010–2017 Компания «Техномарт»</span>
+            <span>Все права защищены</span>
           </p>
           <div class="footer-social">
             <ul>
@@ -305,22 +307,21 @@
             </ul>
           </div>
           <div class="footer-dev-contacts">
-            <p class="footer-feedback">Обратная связь:<br>
-              <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+            <p class="footer-feedback">
+              <span>Обратная связь:</span>
+              <span class="footer-feedback-mail"><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></span>
             </p>
             <p class="footer-developer">
-              Разработано —<br>
-              <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+              <span>Разработано —</span>
+              <span class="footer-developer-website"><a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></span>
             </p>
           </div>
         </div>
       </div>
   </footer>
   <section class="modal modal-map">
-    <h2 class="visually-hidden">
-         Как до нас добраться
-         </h2>
-    <img src="img/map-large.jpg" width="940" height="446" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург" class="modal-map-img">
+    <h2 class="visually-hidden">Как до нас добраться</h2>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123595!2d30.32089461558447!3d59.93879686904856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1512838717921" width="940" height="446" style="border:0" allowfullscreen></iframe>
     <button class="modal-close" type="button" aria-label="Закрыть"></button>
   </section>
   <section class="modal modal-feedback">
