Проект готов к защите

--- a/catalog.html
+++ b/catalog.html
@@ -50,7 +50,7 @@
             </a>
           </li>
           <li>
-            <a class="user-button logout-button" href="#">
+            <a class="user-button logout-button" href="logout.html">
               <span class="visually-hidden">Выйти</span>
               <svg class="logout-button-icon" xmlns="http://www.w3.org/2000/svg" width="21" height="17" viewBox="0 0 21 17">
                 <g fill="#c5c5c5">
@@ -156,12 +156,12 @@
           <ul class="catalog-list">
             <li class="catalog-item">
               <div class="catalog-item-buttons">
-                <a class="catalog-item-button catalog-item-order">Купить</a>
-                <a class="catalog-item-button catalog-item-bookmark">В закладки</a>
+                <a class="catalog-item-button catalog-item-order" href="#">Купить</a>
+                <a class="catalog-item-button catalog-item-bookmark" href="#">В закладки</a>
               </div>
               <div class="catalog-image-container">
                 <a href="catalog-item.html">
-                  <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+                  <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
                 </a>
               </div>
               <a href="catalog-item.html">
@@ -172,12 +172,12 @@
             </li>
             <li class="catalog-item">
               <div class="catalog-item-buttons">
-                <a class="catalog-item-button catalog-item-order">Купить</a>
-                <a class="catalog-item-button catalog-item-bookmark">В закладки</a>
+                <a class="catalog-item-button catalog-item-order" href="#">Купить</a>
+                <a class="catalog-item-button catalog-item-bookmark" href="#">В закладки</a>
               </div>
               <div class="catalog-image-container">
                 <a href="catalog-item.html">
-                <img src="img/product-2.jpg" alt="Перфоратор BOSCH BFG 6000" width="127" height="112">
+                <img src="img/product-2.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170">
               </a>
               </div>
               <a href="catalog-item.html">
@@ -188,12 +188,12 @@
             </li>
             <li class="catalog-item catalog-item-new">
               <div class="catalog-item-buttons">
-                <a class="catalog-item-button catalog-item-order">Купить</a>
-                <a class="catalog-item-button catalog-item-bookmark">В закладки</a>
+                <a class="catalog-item-button catalog-item-order" href="#">Купить</a>
+                <a class="catalog-item-button catalog-item-bookmark" href="#">В закладки</a>
               </div>
               <div class="catalog-image-container">
                 <a href="catalog-item.html">
-                 <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112">
+                 <img src="img/product-4.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170">
               </a>
               </div>
               <a href="catalog-item.html">
@@ -203,12 +203,12 @@
             </li>
             <li class="catalog-item">
               <div class="catalog-item-buttons">
-                <a class="catalog-item-button catalog-item-order">Купить</a>
-                <a class="catalog-item-button catalog-item-bookmark">В закладки</a>
+                <a class="catalog-item-button catalog-item-order" href="#">Купить</a>
+                <a class="catalog-item-button catalog-item-bookmark" href="#">В закладки</a>
               </div>
               <div class="catalog-image-container">
                 <a href="catalog-item.html">
-                 <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+                 <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
               </a>
               </div>
               <a href="catalog-item.html">
@@ -219,12 +219,12 @@
             </li>
             <li class="catalog-item catalog-item-new">
               <div class="catalog-item-buttons">
-                <a class="catalog-item-button catalog-item-order">Купить</a>
-                <a class="catalog-item-button catalog-item-bookmark">В закладки</a>
+                <a class="catalog-item-button catalog-item-order" href="#">Купить</a>
+                <a class="catalog-item-button catalog-item-bookmark" href="#">В закладки</a>
               </div>
               <div class="catalog-image-container">
                 <a href="catalog-item.html">
-                 <img src="img/product-2.jpg" alt="Перфоратор BOSCH BFG 6000" width="127" height="112">
+                 <img src="img/product-2.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170">
               </a>
               </div>
               <a href="catalog-item.html">
@@ -235,12 +235,12 @@
             </li>
             <li class="catalog-item">
               <div class="catalog-item-buttons">
-                <a class="catalog-item-button catalog-item-order">Купить</a>
-                <a class="catalog-item-button catalog-item-bookmark">В закладки</a>
+                <a class="catalog-item-button catalog-item-order" href="#">Купить</a>
+                <a class="catalog-item-button catalog-item-bookmark" href="#">В закладки</a>
               </div>
               <div class="catalog-image-container">
                 <a href="catalog-item.html">
-                 <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112">
+                 <img src="img/product-4.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170">
               </a>
               </div>
               <a href="catalog-item.html">
@@ -250,12 +250,12 @@
             </li>
             <li class="catalog-item catalog-item-new">
               <div class="catalog-item-buttons">
-                <a class="catalog-item-button catalog-item-order">Купить</a>
-                <a class="catalog-item-button catalog-item-bookmark">В закладки</a>
+                <a class="catalog-item-button catalog-item-order" href="#">Купить</a>
+                <a class="catalog-item-button catalog-item-bookmark" href="#">В закладки</a>
               </div>
               <div class="catalog-image-container">
                 <a href="catalog-item.html">
-                 <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+                 <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
               </a>
               </div>
               <a href="catalog-item.html">
@@ -266,12 +266,12 @@
             </li>
             <li class="catalog-item">
               <div class="catalog-item-buttons">
-                <a class="catalog-item-button catalog-item-order">Купить</a>
-                <a class="catalog-item-button catalog-item-bookmark">В закладки</a>
+                <a class="catalog-item-button catalog-item-order" href="#">Купить</a>
+                <a class="catalog-item-button catalog-item-bookmark" href="#">В закладки</a>
               </div>
               <div class="catalog-image-container">
                 <a href="catalog-item.html">
-                 <img src="img/product-2.jpg" alt="Перфоратор BOSCH BFG 6000" width="127" height="112">
+                 <img src="img/product-2.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170">
               </a>
               </div>
               <a href="catalog-item.html">
@@ -282,12 +282,12 @@
             </li>
             <li class="catalog-item">
               <div class="catalog-item-buttons">
-                <a class="catalog-item-button catalog-item-order">Купить</a>
-                <a class="catalog-item-button catalog-item-bookmark">В закладки</a>
+                <a class="catalog-item-button catalog-item-order" href="#">Купить</a>
+                <a class="catalog-item-button catalog-item-bookmark" href="#">В закладки</a>
               </div>
               <div class="catalog-image-container">
                 <a href="catalog-item.html">
-                 <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112">
+                 <img src="img/product-4.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170">
               </a>
               </div>
               <a href="catalog-item.html">
@@ -379,6 +379,7 @@
     </div>
     <button class="modal-close" type="button" aria-label="Закрыть"></button>
   </section>
+  <script src="js/script-catalog.min.js"></script>
 </body>
 
 </html>
