--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
         <ul class="main-products-list">
           <li class="catalog-item">
             <div class="catalog-item-buttons">
-               <a class="catalog-item-button catalog-item-order">Купить</a>
-               <a class="catalog-item-button catalog-item-bookmark">В закладки</a>
+               <a class="catalog-item-button catalog-item-order" href="#">Купить</a>
+               <a class="catalog-item-button catalog-item-bookmark" href="#">В закладки</a>
             </div>
             <div class="catalog-image-container">
              <a href="catalog-item.html">
-               <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+               <img src="img/product-3.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
              </a>
             </div>
             <a href="catalog-item.html">
@@ -140,12 +140,12 @@
           </li>
           <li class="catalog-item">
             <div class="catalog-item-buttons">
-               <a class="catalog-item-button catalog-item-order">Купить</a>
-               <a class="catalog-item-button catalog-item-bookmark">В закладки</a>
+               <a class="catalog-item-button catalog-item-order" href="#">Купить</a>
+               <a class="catalog-item-button catalog-item-bookmark" href="#">В закладки</a>
             </div>
             <div class="catalog-image-container">
              <a href="catalog-item.html">
-               <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+               <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
              </a>
             </div>
             <a href="catalog-item.html">
@@ -156,12 +156,12 @@
           </li>
           <li class="catalog-item">
             <div class="catalog-item-buttons">
-               <a class="catalog-item-button catalog-item-order">Купить</a>
-               <a class="catalog-item-button catalog-item-bookmark">В закладки</a>
+               <a class="catalog-item-button catalog-item-order" href="#">Купить</a>
+               <a class="catalog-item-button catalog-item-bookmark" href="#">В закладки</a>
             </div>
             <div class="catalog-image-container">
              <a href="catalog-item.html">
-               <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+               <img src="img/product-2.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
              </a>
             </div>
             <a href="catalog-item.html">
@@ -172,12 +172,12 @@
           </li>
           <li class="catalog-item catalog-item-new">
             <div class="catalog-item-buttons">
-               <a class="catalog-item-button catalog-item-order">Купить</a>
-               <a class="catalog-item-button catalog-item-bookmark">В закладки</a>
+               <a class="catalog-item-button catalog-item-order" href="#">Купить</a>
+               <a class="catalog-item-button catalog-item-bookmark" href="#">В закладки</a>
             </div>
             <div class="catalog-image-container">
              <a href="catalog-item.html">
-               <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+               <img src="img/product-4.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
              </a>
             </div>
             <a href="catalog-item.html">
@@ -258,8 +258,8 @@
           <h2>Контакты</h2>
           <p>Вы можете забрать товар сами, заехав в наш офис:
           </p>
-          <div class="contacts-map"><a href="https://goo.gl/maps/KQanHvccPNP2" target="_blank"><img src="img/main-map.jpg" alt="Карта проезда" width="300" height="158"></a></div>
-          <a href="#" class="button button-contacts">Заблудились? Напишите нам!</a>
+          <div class="contacts-map"><a class="contacts-map-link" href="https://goo.gl/maps/KQanHvccPNP2" target="_blank"><img src="img/main-map.jpg" alt="Карта проезда" width="300" height="158"></a></div>
+          <a href="form.html" class="button button-contacts">Заблудились? Напишите нам!</a>
         </section>
       </div>
     </div>
@@ -344,6 +344,7 @@
     </form>
     <button class="modal-close" type="button" aria-label="Закрыть"></button>
   </section>
+  <script src="js/script-index.min.js"></script>
 </body>
 
 </html>
